--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+* {
+  margin:0;
+}
+
 .App {
   text-align: center;
+  padding: 0;
+  background-color:#212121;
+  min-height:100vh;
+  color:#fff;
+  font-family: arial;
+  margin-bottom:0;
+  min-width:100vw;
 }
 
 .App-logo {
@@ -26,6 +37,205 @@
 
 .App-link {
   color: #61dafb;
+}
+
+
+form {
+  padding: 10px 50px;
+  border: 2px solid black;
+  border-radius: 8px;
+  display: inline-flex;
+  flex-direction: column;
+}
+
+input {
+  height: 30px;
+  font-size: 18px;
+  text-align: center;
+}
+
+button {
+  width: 150px;
+  padding: 5px 20px;
+  border-radius: 10px;
+  margin: 0 auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 16px;
+}
+
+a {
+  text-decoration: none;
+  color:#fff;
+}
+
+li {
+  list-style: none;
+}
+
+.project, .task {
+  margin: 0 auto;
+  margin-bottom: 5px;
+  margin-top: 10px;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 7px;
+  max-width: 700px;
+}
+
+.nav-style ul {
+  display:flex;
+  flex-direction: row;
+  
+}
+
+.nav-style li {
+  padding:20px 25px;
+  display:flex;
+  align-items: center;
+ 
+}
+
+.nav-style span {
+  padding:20px 65px 20px 25px ;
+  display:flex;
+  align-items: center;;
+}
+
+#logout-btn {
+ text-align:right;
+  padding-left:5%;
+ 
+}
+
+#myEmbeddedScene {
+  height:80vh;
+  width:80vw;
+  margin:0 auto;
+}
+
+.container {
+  width: 88vw;
+  padding: 0px 0px;
+
+  margin:100px auto;
+  background-color:#21212188; 
+}
+
+#edit-wrapper {
+  display:flex;
+  width:80%;
+  margin:0px auto;
+}
+
+#edit-profile-form {
+  display:none;
+}
+
+.env {
+  display:flex;
+  flex-direction:column;
+  width:45%;
+}
+
+#wrapper {
+  background-image: url(/cube.png);
+  background-size:70vw;
+  background-repeat: no-repeat;
+  background-position: center;;
+  padding-bottom:35px;
+  margin-top:-50px
+
+}
+
+.env h3, a {
+  text-align:left;
+}
+
+.env a {
+  margin-bottom:25px;
+}
+
+#comments-wrapper {
+  height:30vh;
+  width:75%;
+  margin:0 auto;
+  background-color:#dbe3e8
+}
+
+#search-input {
+  width:22vw;
+  background-color:#fff;
+  border:none;
+  padding-left:100px;
+  border-radius:5px;
+  text-align:center
+}
+
+#comments-wrapper {
+  color:black;
+  text-align:left;
+ padding:30px;
+}
+
+.comment {
+text-align:left;
+color:black;
+margin:20px;
+}
+
+#search-button {
+  /* width:10vw; */
+  border-radius:5px;
+  color:#fff;
+  background-color:#2b90d9;
+  padding:7px 0px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
+#search-bar {
+  display:flex;
+  justify-content: flex-end;
+  flex-direction: row;
+}
+
+nav {
+  display:flex;
+  flex-direction: row;
+  justify-content:space-between;
+}
+
+.nav-style button{
+  color:white;
+  border:none;
+  background-color:transparent;
+}
+
+
+.vrscene {
+  margin-top:10px;
+}
+
+.vrscene-h1 {
+  padding:17px 0px 30px 0px;
+  text-align:left;
+  width:80%;
+  margin:0 auto;
+  display:flex;
+
+}
+
+#vrscene-theme {
+  text-align:right;
+  
+}
+
+#logo {
+  color:#2b90d9;
+  font-size:20px;
+
 }
 
 @keyframes App-logo-spin {
