--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
+ * {
+ margin: 0
+
+}
  .App {
   text-align: center;
   padding: 0;
   background-color: rgba(0, 0, 0, 0.897); 
-  min-height:200vh;
+  min-height:100%;
   color:#fff;
   font-family: arial;
   margin-bottom:0;
@@ -48,7 +52,9 @@
 input {
   height: 30px;
   font-size: 16px;
-  text-align: center;
+text-align:center;
+  border-radius: 4px;
+  border:0.5px solid white;
 }
 
 button {
@@ -105,16 +111,19 @@ li {
 
 .container {
   width: 88vw;
-  padding:2em 0em;
+  padding:0.5em 0em;
   border-radius:5px;
   color:black;
-  margin:70px auto;
-  background-color:#f6f4f7;
-  -webkit-box-shadow: 4px 4px 3px 2px rgba(255,255,255,0.2);
+  margin:45px auto;
+  /* background-color:#f6f4f7; */
+  background-color:transparent;
+  /* -webkit-box-shadow: 4px 4px 3px 2px rgba(255,255,255,0.2);
   -moz-box-shadow: 4px 4px 3px 2px rgba(255,255,255,0.2);
-  box-shadow: 4px 4px 3px 2px rgba(255,255,255,0.2);
+  box-shadow: 4px 4px 3px 2px rgba(255,255,255,0.2); */
   display:flex;
   flex-direction:row;
+ 
+  align-items:center;
 }
 
 
@@ -127,11 +136,46 @@ li {
 
 .profile-details {
   margin:0 auto;
-  font-size:14px;
+  font-size:15px;
+  border:1px solid grey;
+  padding:10px;
+  color:white;
+  background-color:transparent;
+  
+}
+
+#profile-wrapper{
+  padding-bottom:1em;
+
+}
+
+.extra-details {
+  border-radius:5px;
+  border:none;
+  display:flex;
+  flex-direction:column;
+}
+
+#create-btn {
+  width: 15em;
+  height: 3em;
+  color:#fff;
+  border:black;
+  background-color:#2ab193e5;
 }
 
 #edit-profile-form {
   display:none;
+  
+}
+
+#upload {
+  display:none
+}
+
+#edit-profile-form input {
+  display:flex;
+  flex-direction:column;
 }
 
 .env {
@@ -165,7 +209,7 @@ li {
   border:none;
   padding-left:100px;
   border-radius:5px;
-  text-align:center
+  text-align:left;
 }
 
 #comments-wrapper {
@@ -173,12 +217,13 @@ li {
   text-align:left;
   padding:30px;
   width:75%;
-  margin:0 auto;
+  margin:50px auto;
   background-color:#F6F4F7;
   border-radius:5px;
   -webkit-box-shadow: 4px 4px 3px 2px rgba(255,255,255,0.2);
   -moz-box-shadow: 4px 4px 3px 2px rgba(255,255,255,0.2);
   box-shadow: 4px 4px 3px 2px rgba(255,255,255,0.2);
+  
 }
 
 #comments-wrapper form {
@@ -260,13 +305,16 @@ nav {
 
 #user-details {
   margin-top:10px;
+  /* display:flex;
+  flex-direction:column; */
 }
 
 .one-user {
   display:flex;
   flex-direction:column;
-  padding:30px 20px ;
+  padding:30px 30px ;
   text-align:center;
+ justify-content: center;;
 
 }
 
@@ -280,7 +328,13 @@ nav {
 }
 
 footer{
-  padding: 2em 0;
+  padding: 1.5em 0;
+  display:flex;
+  background-color:black;
+  align-items:center;
+  flex-direction:column;
+  color:#2ab193e5;
+  font-weight:600;
 } 
 
  @keyframes App-logo-spin {
