--- a/src/App.css
+++ b/src/App.css
@@ -98,9 +98,9 @@ li {
 }
 
 #logout-btn {
- text-align:right;
-  padding-left:5%;
- 
+  text-align: right;
+  position: absolute;
+  right: 1%;
 } 
 
  #myEmbeddedScene {
@@ -151,6 +151,10 @@ li {
 
 }
 
+button {
+cursor:pointer;
+}
+
 .extra-details {
   border-radius:5px;
   border:none;
@@ -169,6 +173,13 @@ li {
 #create-delete {
   display:flex;
   flex-direction:column;
+}
+
+#delete-btn {
+  float:right;
+  display:block;
+  border:none;
+ 
 }
 
 #edit-profile-form {
@@ -209,21 +220,28 @@ li {
   margin-bottom:25px;
 }
 
+#create-comment {
+  background-color:transparent;
+  border-bottom:1px solid grey;
+  text-align:left;
+}
 
 #search-input {
-  width:22vw;
+  width:26vw;
+  height: 2em;
   background-color:#fff;
   border:none;
-  padding-left:100px;
+  padding-left:1vw;
   border-radius:5px;
   text-align:left;
+  margin-left:3vw;
 }
 
 #comments-wrapper {
   color:black;
   text-align:left;
   padding:30px;
-  width:75%;
+  width:70%;
   margin:50px auto;
   background-color:#F6F4F7;
   border-radius:5px;
@@ -264,8 +282,9 @@ margin:20px;
 
 #search-bar {
   display:flex;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
   flex-direction: row;
+  width:50%;
 }
 
 .comment h3 {
@@ -276,6 +295,7 @@ nav {
   display:flex;
   flex-direction: row;
   justify-content:space-between;
+  width:100vw;
 }
 
 .nav-style button{
@@ -319,10 +339,42 @@ nav {
 .one-user {
   display:flex;
   flex-direction:column;
-  padding:30px 30px ;
+  padding:20px 25px ;
   text-align:center;
- justify-content: center;;
+ justify-content: center;
+ width: 70%;
+ margin: 0 auto;
 
+}
+
+.overlay {
+  position: absolute; 
+  bottom: 0; 
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1; 
+  width: 100%;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 20px;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.containers:hover .overlay {
+  opacity: 1;
+}
+
+.containers {
+  position: relative;
+  width: 70%;
+  margin:0 auto
+}
+
+
+.one-user  h3 {
+ margin:0 auto;
 }
 
 #user-name {
@@ -332,6 +384,11 @@ nav {
   align-items:center;
   margin-top:50px;
   padding-left:0;
+}
+
+.comments-btns {
+  border-radius:0;
+  margin:0 0.5vw;
 }
 
 footer{
@@ -344,6 +401,36 @@ footer{
   font-weight:600;
   font-size:13px
 } 
+
+#dropdown {
+  background-color:white;
+  padding:5px;
+  margin:30px 0;
+}
+
+#sign-up label{
+ margin-top:2vh;
+  
+  margin-bottom: 1vh;
+
+}
+
+#log-in label{
+  margin-top:2vh;
+   
+   margin-bottom: 1vh;
+ 
+ }
+
+
+#sign-up {
+  display:flex;
+}
+
+#sign-up input {
+  margin:0 auto;
+}
+
 
  @keyframes App-logo-spin {
   from {
