--- a/src/App.css
+++ b/src/App.css
@@ -194,6 +194,8 @@ cursor:pointer;
 #edit-profile-form input {
   display:flex;
   flex-direction:column;
+  margin-bottom:0.5em;
+  margin-top:0.5em;
 }
 
 .env {
