--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
  margin: 0
 
 }
+
  .App {
   text-align: center;
   padding: 0;
@@ -29,9 +30,14 @@
   color: white;
 } 
 
- .App-link {
+ /* .App-link {
   color: #61dafb;
-} 
+}  */
+
+a:hover {
+color:white;
+text-decoration: none;
+}
 
 
  form {
@@ -51,13 +57,13 @@ text-align:center;
 }
 
 button {
-  width: 150px;
+  /* width: 150px; */
   padding: 5px 20px;
   border-radius: 10px;
   background-color:transparent;
-  margin: 0 auto;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  /* margin: 0 auto; */
+  /* margin-top: 5px; */
+  /* margin-bottom: 5px; */
   font-size: 16px;
 }
 
@@ -70,6 +76,21 @@ li {
   list-style: none;
 }
 
+.navbar-nav {
+  width:100%;
+}
+
+.navbar-brand {
+  margin-left:1em;
+  margin-right:3em;
+}
+
+.navbar-nav li {
+  margin:2% 3.3% 2% 3.3%;
+  align-items:center;
+  display: flex;
+  
+}
 
 .nav-style ul {
   display:flex;
@@ -90,10 +111,18 @@ li {
   align-items: center;;
 }
 
+#save-object-btn {
+  color: white;
+  width:50%;
+  margin:2% auto
+}
+
 #logout-btn {
-  text-align: right;
+  /* text-align: right;
   position: absolute;
-  right: 1%;
+  right: 1%; */
+  border:none;
+  color:white;
 } 
 
  #myEmbeddedScene {
@@ -152,6 +181,7 @@ cursor:pointer;
   color:#fff;
   border:black;
   background-color:#2ab193e5;
+  margin:0 auto;
 }
 
 #create-delete {
@@ -211,8 +241,8 @@ cursor:pointer;
 }
 
 #search-input {
-  width:26vw;
-  height: 2em;
+  width:29vw;
+  height: 2.1em;
   background-color:#fff;
   border:none;
   padding-left:1vw;
@@ -240,7 +270,6 @@ cursor:pointer;
   border:none;
 }
 
-
 #comments-wrapper input {
   width:70%;
 }
@@ -252,12 +281,12 @@ margin:20px;
 } 
 
 #search-button {
-
   border-radius:5px;
   color:#fff;
   background-color:#2ab193e5;
-  padding:7px 0px;
+  /* padding:7px 0px; */
   display:flex;
+  font-size:0.9em;
   align-items:center;
   justify-content:center;
 }
@@ -266,6 +295,15 @@ margin:20px;
   display:flex;
   flex-direction: row;
   width:50%;
+}
+
+h2 {
+  font-size:1.3em;
+}
+
+h3 {
+  font-size:1.3em;
+  margin-bottom:0em;
 }
 
 .comment h3 {
@@ -295,19 +333,17 @@ nav {
   width:80%;
   margin:0 auto;
   display:flex;
-
 }
 
 #vrscene-theme {
-  text-align:right;
-  
+  text-align:right;  
 }
 
 #logo {
   color:rgba(65, 218, 185, 0.897); 
   color:rgba(36, 196, 175, 0.897);
   font-size:20px;
-
+  margin-bottom:0;
 }
 
 #user-details {
@@ -319,10 +355,9 @@ nav {
   flex-direction:column;
   padding:20px 25px ;
   text-align:center;
- justify-content: center;
- width: 70%;
- margin: 0 auto;
-
+  justify-content: center;
+  width: 70%;
+  margin: 0 auto;
 }
 
 .overlay {
@@ -349,7 +384,6 @@ nav {
   width: 70%;
   margin:0 auto
 }
-
 
 .one-user  h3 {
  margin:0 auto;
@@ -405,6 +439,105 @@ footer{
   margin:0 auto;
 }
 
+#edit-profile-btn {
+  margin: 2em 0em;
+  font-size: 1em;
+  color: white;
+  border: 1px solid white;
+ width:45%;
+  text-align:center;
+  padding: 2.2%;
+  text-decoration-color: center;
+}
+
+#space-name {
+  text-align: left;
+  text-decoration: underline;
+}
+
+
+@media screen and (max-width:1000px) {
+.nav-item {
+  text-align: center;
+  margin:0 auto;
+}
+
+#comments-wrapper {
+  margin:50px auto
+}
+
+.navbar-nav li {
+  margin:0.4em auto;
+}
+.navbar-nav {
+  width:100%
+}
+.navbar-brand {
+  margin-left:0em;
+}
+.container {
+  display:block;
+}
+.env h3 {
+  text-align:center;
+}
+#edit-profile-btn {
+  margin:0 auto;
+  width: 18%;
+  padding:1.2%;
+}
+#space-name {
+  text-align:center;
+}
+#comments-wrapper input {
+  width:100%;
+  margin:0 auto;
+}
+
+#save-object-btn {
+  color: white;
+  width:50%;
+  margin:2% auto
+}
+
+#comments-wrapper {
+  width:100%;
+}
+
+#edit-profile-form input {
+  margin:0 auto;
+ 
+}
+
+#edit-profile-btn {
+  margin-top:2%;
+  margin-bottom:1%;
+}
+
+.env {
+justify-content: center;
+}
+
+#save-profile-btn {
+  margin-top:2%;
+  color:white;
+}
+}
+
+@media screen and (max-width:800px) {
+#comments-wrapper form {
+  flex-direction: column;
+}
+.comments-btns {
+ 
+  margin-top:2%;
+}
+
+}
+
+#save-profile-btn {
+color: white
+}
 
  @keyframes App-logo-spin {
   from {
